# ChangeLog for x11-wm/windowmaker
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/windowmaker/ChangeLog,v 1.100 2008/08/26 06:43:45 jer Exp $

  26 Aug 2008; Jeroen Roovers <jer@gentoo.org> windowmaker-0.92.0-r7.ebuild:
  Stable for HPPA (bug #234066).

  09 Aug 2008; Raúl Porcel <armin76@gentoo.org>
  windowmaker-0.92.0-r7.ebuild:
  alpha/sparc/x86 stable wrt #234066

  09 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org>
  windowmaker-0.92.0-r7.ebuild:
  stable amd64, bug 234066

  08 Aug 2008; Markus Rothe <corsair@gentoo.org>
  windowmaker-0.92.0-r7.ebuild:
  Stable on ppc64; bug #234066

  08 Aug 2008; nixnut <nixnut@gentoo.org> windowmaker-0.92.0-r7.ebuild:
  Stable on ppc wrt bug 234066

  07 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  18 Jun 2008; Harald van Dĳk <truedfx@gentoo.org>
  windowmaker-0.92.0-r7.ebuild:
  Don't try to add -lresolv, configure picks it up already (#226931)

  08 Dec 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -files/0.91.0/64bit+endian-fixes-0.9x.patch,
  -files/0.91.0/maximize-fix-0.9x.patch, -files/0.91.0/menufocus.patch,
  -windowmaker-0.91.0-r1.ebuild:
  Dropping old version, please use 0.92.0-r*

*windowmaker-0.92.0-r7 (22 Nov 2007)

  22 Nov 2007; Harald van Dĳk <truedfx@gentoo.org>
  -windowmaker-0.92.0-r6.ebuild, +windowmaker-0.92.0-r7.ebuild:
  Get rid of gettextlib, so that fontconfig works (#199414)

*windowmaker-0.92.0-r6 (21 Nov 2007)

  21 Nov 2007; Fabian Groffen <grobian@gentoo.org>
  -files/0.92.0/windowmaker-0.92.0-as-needed.patch,
  +files/0.92.0/windowmaker-0.92.0-math_h.patch,
  -windowmaker-0.92.0-r5.ebuild, +windowmaker-0.92.0-r6.ebuild:
  Drop nowings patch that I accidentially enabled, this should make the
  as-needed patch obsolete, and fix bug #199414. Retained Harald's math.h
  fixes by splitting it off in a new patch.

  18 Nov 2007; Harald van Dĳk <truedfx@gentoo.org>