@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>gnustep</herd>
-  <use>
-    <flag name='modelock'>Enable XKB language status lock support. README says: "If you don't know what it is you probably don't need it."</flag>
-  </use>
+	<herd>gnustep</herd>
+	<use>
+		<flag name='modelock'>Enable XKB language status lock support. README
+			says: "If you don't know what it is you probably don't need
+			it."</flag>
+		<flag name='vdesktop'>Enable dynamic virtual desktop (conflicts with
+			software that works on the edges of the screen)</flag>
+	</use>
 </pkgmetadata>
