@@ -1,6 +1,11 @@
 # ChangeLog for x11-wm/windowmaker
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/windowmaker/ChangeLog,v 1.100 2008/08/26 06:43:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/windowmaker/ChangeLog,v 1.101 2008/08/26 06:56:22 grobian Exp $
+
+  26 Aug 2008; Fabian Groffen <grobian@gentoo.org> metadata.xml,
+  -windowmaker-0.92.0-r3.ebuild, -windowmaker-0.92.0-r4.ebuild,
+  windowmaker-0.92.0-r7.ebuild:
+  Add vdesktop USE-flag for Robert Wolf in bug #234066, remove old
 
   26 Aug 2008; Jeroen Roovers <jer@gentoo.org> windowmaker-0.92.0-r7.ebuild:
   Stable for HPPA (bug #234066).
